--- a/source/mytheme/templates/index.html
+++ b/source/mytheme/templates/index.html
@@ -1,20 +1,11 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
 {% block content %}
-	{% include "header.html" %}
-
-	<dl>
-		<ol>
-			{% for article in articles_page.object_list %}
-				<li>
-					<h1 class="title">
-						<a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title }}">{{ article.title }}</a>
-					</h1>
-					<abbr class="published" title="{{ article.date.isoformat() }}">{{ article.locale_date }}</abbr>
-				<div class="entry-content"> {{ article.summary }} </div>
-				</li>
-			{% endfor %}
-		</ol>
-	</dl>
-
-	{% include 'pagination.html' %}
-{% endblock content %}
+<ul class='articles'>
+{% for article in articles_page.object_list %}
+<li><h4><a href="{{ SITEURL }}/{{article.url}}">{{ article.title }}</a></h4>
+	<p>{{article.locale_date}}</p>
+	<p>{{article.summary}}</p></li>
+{% endfor %}
+{% include 'pagination.html' %}
+{% endblock %}
