--- a/source/mytheme/templates/page.html
+++ b/source/mytheme/templates/page.html
@@ -1,16 +1,6 @@
-{% extends "base.html" %}
-{% block title %}{{ page.title }}{%endblock%}
+{% extends 'base.html' %}
+
 {% block content %}
-	{% include "header.html" %}
-	<article>
-		<h1 id="title">
-			<a href="{{ SITEURL }}/{{ page.url }}" rel="bookmark">{{ page.title }}</a>
-		</h1>
-		{{ page.content }}
-
-	</article>
-
-	<footer>
-		<a href="{{ SITEURL }}/" class="button_accent">&larr;&nbsp;&nbsp;&nbsp;Back to blog</a>
-	</footer>
+<h2>{{ page.title }}</h2>
+{{ page.content }}
 {% endblock %}
