--- a/source/mytheme/templates/head.html
+++ b/source/mytheme/templates/head.html
@@ -1,16 +1,27 @@
-    <head>
-    <title>{{ SITENAME }} </title>
-    <meta charset='utf-8'>
-    <script src="theme/js/jquery-1.11.2.js"></script>
-    <link rel='stylesheet' href='theme/css/main.css' type='text/css'>
-    <link rel="stylesheet" href="theme/css/slicknav.css" />
-    <script src="theme/css/jquery.slicknav.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('#menu').slicknav({
-                label: ''
-            });
-        });
-    </script>
-    <meta name='viewport' content='width=device-width'>
-    </head>
+<head>
+<title>{{ SITENAME }}</title>
+<meta charset='utf-8'>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Cooking and Code: simple, healthy, easy, delicious recipes curated by me, Lucy Wyman">
+<meta name="keywords" content="blog, code, lucy, wyman">
+<meta name="robots" content="index, follow">
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Blog" />
+<meta property="og:url" content="http://blog.lucywyman.me" />
+<meta property="og:site_name" content="Blog" />
+
+<script src="theme/js/jquery-1.11.2.js"></script>
+<link rel='stylesheet' href='theme/css/main.css' type='text/css'>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-48093989-5', 'auto');
+ga('send', 'pageview');
+
+</script>
+</head>
