--- a/source/mytheme/templates/index.html
+++ b/source/mytheme/templates/index.html
@@ -5,8 +5,7 @@
 {% for article in articles_page.object_list %}
 <li><h4><a href="{{ SITEURL }}/{{article.url}}">{{ article.title }}</a></h4>
 	<p>{{article.locale_date}}</p>
-	<p>{{article.summary}}</p></li>
-	<a href='{{article.url}}'>Read more...</a>
+	<p>{{article.summary}}<a href='{{article.url}}'>Read more...</a></p></li>
 {% endfor %}
 {% include 'pagination.html' %}
 {% endblock %}
