--- a/source/mytheme/templates/base.html
+++ b/source/mytheme/templates/base.html
@@ -3,17 +3,34 @@
 	{% include "head.html" %}
 	<body>
 		<nav>
-			<h3><a href='/'>Lucy Wyman</a></h3>
-			<a href='/about.html'>About</a>
+			<ul>
+				<li><h3><a href='{{ SITEURL }}'>Lucy Wyman</a></h3></li>
+				<li><a href='{{ SITEURL }}/about.html'>About</a></li>
+				<li><a href='{{ SITEURL }}/categories.html'>Categories &#129171;</a>
+				<ul>
+					{% for cat in categories %}
+					<li><a href='{{ SITEURL }}/{{ cat | replace(" ", "-") }}.html'>
+							{{ cat }}
+						</a>
+					</li>
+					{% endfor %}
+				</ul>
+			</ul>
 		</nav>
 		<main>
 		{% block content %}
 		{% endblock content%}
 		</main>
 		<div class='footer'>
-			<a href='https://github.com/lucywyman'><img class='social' src='theme/images/github-icon.png'></a>
-			<a href='http://linkedin.com/pub/lucy-wyman/70/553/6a7/'><img class='social' src='theme/images/linkedin.png'></a>
-			<a href='https://plus.google.com/107251431728646146032/posts'><img class='social' src='theme/images/google-plus.png'></a>
+			<a href='https://github.com/lucywyman'>
+				<img class='social' src='theme/images/github-icon.png'>
+			</a>
+			<a href='http://linkedin.com/pub/lucy-wyman/70/553/6a7/'>
+				<img class='social' src='theme/images/linkedin.png'>
+			</a>
+			<a href='https://plus.google.com/107251431728646146032/posts'>
+				<img class='social' src='theme/images/google-plus.png'>
+			</a>
 		</div>
 	</body>
 </html>
