--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -8,14 +8,24 @@ a {
   a:hover {
     color: rgba(196, 18, 48, 0.8); }
 
-nav h3 {
-  display: inline-block; }
-nav a {
-  padding: 3px; }
+nav ul {
+  list-style-type: none; }
+  nav ul li {
+    display: inline-block; }
+    nav ul li ul {
+      display: none; }
+      nav ul li ul li {
+        display: block; }
+    nav ul li h3 {
+      display: inline-block; }
+    nav ul li a {
+      padding: 3px; }
 
 .articles li {
   list-style-type: none;
   border-bottom: 2px solid #444; }
+  .articles li li {
+    border-bottom: none; }
 
 .footer {
   width: 100%;
