--- a/source/mytheme/templates/head.html
+++ b/source/mytheme/templates/head.html
@@ -12,8 +12,8 @@
 <meta property="og:url" content="http://blog.lucywyman.me" />
 <meta property="og:site_name" content="Blog" />
 
-<script src="theme/js/jquery-1.11.2.js"></script>
-<link rel='stylesheet' href='theme/css/main.css' type='text/css'>
+<script src="/theme/js/jquery-1.11.2.js"></script>
+<link rel='stylesheet' href='/theme/css/main.css' type='text/css'>
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
