--- a/source/mytheme/templates/head.html
+++ b/source/mytheme/templates/head.html
@@ -1,6 +1,6 @@
 <head>
 <title>{{ SITENAME }}</title>
-<meta charset='utf-8'>
+<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Cooking and Code: simple, healthy, easy, delicious recipes curated by me, Lucy Wyman">
