Remove how bp post

--- a/source/mytheme/templates/head.html
+++ b/source/mytheme/templates/head.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Cooking and Code: simple, healthy, easy, delicious recipes curated by me, Lucy Wyman">
+<meta name="description" content="A humble blog by me, Lucy Wyman">
 <meta name="keywords" content="blog, code, lucy, wyman">
 <meta name="robots" content="index, follow">
 <meta property="og:locale" content="en_US" />
