--- a/source/mytheme/static/css/main.css
+++ b/source/mytheme/static/css/main.css
@@ -1,4 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
+body {
+  background-color: #F5F4F2; }
+
 h1, h2, h3, h4, h5, h6, p, a, li {
   font-family: "Lato", sans-serif;
   color: #444; }
@@ -39,7 +42,7 @@ nav ul {
     display: inline-block; }
 
 @media screen and (min-width: 680px) {
-  body {
+  main {
     max-width: 700px;
     margin: 10px auto; } }
 
