--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
 body {
-  background-color: #F5F4F2; }
+  background-color: #f5f4f2;
+  margin: 0px; }
 
 h1, h2, h3, h4, h5, h6, p, a, li {
   font-family: "Lato", sans-serif;
@@ -11,18 +12,21 @@ a {
   a:hover {
     color: rgba(196, 18, 48, 0.8); }
 
-nav ul {
-  list-style-type: none; }
-  nav ul li {
-    display: inline-block; }
-    nav ul li ul {
-      display: none; }
-      nav ul li ul li {
-        display: block; }
-    nav ul li h3 {
+nav {
+  background-color: #fff; }
+  nav ul {
+    list-style-type: none;
+    margin: 0px; }
+    nav ul li {
       display: inline-block; }
-    nav ul li a {
-      padding: 3px; }
+      nav ul li ul {
+        display: none; }
+        nav ul li ul li {
+          display: block; }
+      nav ul li h3 {
+        display: inline-block; }
+      nav ul li a {
+        padding: 3px; }
 
 .articles li {
   list-style-type: none;
