--- a/source/mytheme/templates/index.html
+++ b/source/mytheme/templates/index.html
@@ -3,9 +3,12 @@
 {% block content %}
 <ul class='articles'>
 {% for article in articles_page.object_list %}
-<li><h4><a href="{{ SITEURL }}/{{article.url}}">{{ article.title }}</a></h4>
+<li>
+    <a class='article-img' data-style='background-image: url("{{ SITEURL }}/theme/images/{{ article.img }}");' href='{{article.url}}'></a>
+    <h4><a href="{{ SITEURL }}/{{article.url}}">{{ article.title }}</a></h4>
 	<p>{{article.locale_date}}</p>
-	<p>{{article.summary}}<a href='{{article.url}}'>Read more...</a></p></li>
+	<p>{{article.summary}}<a href='{{article.url}}'>read more</a></p>
+</li>
 {% endfor %}
 {% include 'pagination.html' %}
 {% endblock %}
