--- a/source/mytheme/static/css/main.css
+++ b/source/mytheme/static/css/main.css
@@ -30,9 +30,13 @@ nav {
 
 .articles li {
   list-style-type: none;
-  border-bottom: 2px solid #444; }
-  .articles li li {
-    border-bottom: none; }
+  padding: 20px;
+  margin: 10px;
+  background: #fff;
+  border-left: 3px solid #444; }
+  .articles li .article-img {
+    height: 100%;
+    width: 300px; }
 
 .footer {
   width: 100%;
