--- a/source/mytheme/templates/article.html
+++ b/source/mytheme/templates/article.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class='article'>
 <h2>{{ article.title }}</h2>
 <p>{{ article.locale_date }}</p>
 {% if article.img %}
 <img alt="" src="/theme/images/{{ article.img }}" style="height: 400px;">
 {% endif %}
 {{ article.content }}
-
+</div>
 {% endblock %}
