--- a/source/mytheme/static/css/main.css
+++ b/source/mytheme/static/css/main.css
@@ -3,7 +3,7 @@ body {
   background-color: #f5f4f2;
   margin: 0px; }
 
-h1, h2, h3, h4, h5, h6, p, a, li {
+h1, h2, h3, h4, h5, h6, p, a, li, tr, td, table {
   font-family: "Lato", sans-serif;
   color: #444; }
 
@@ -33,21 +33,35 @@ nav {
 .wrapper {
   display: flex; }
 
+table {
+  border-collapse: collapse; }
+
+table, th, td {
+  border: 1px solid lightgray; }
+
+th, td {
+  padding: 15px;
+  text-align: left; }
+
 main {
   flex: 3 0 60%;
   max-width: 700px;
   min-width: 150px; }
   main .article {
+    background: #fff;
+    border-left: 3px solid #444;
+    padding: 20px; }
+  main .article-blurb {
     display: flex;
     flex-direction: row;
     list-style-type: none;
     margin: 10px;
     background: #fff;
     border-left: 3px solid #444; }
-    main .article img {
+    main .article-blurb img {
       max-width: 300px;
       max-height: 400px; }
-    main .article .blurb-content {
+    main .article-blurb .blurb-content {
       margin: 20px; }
 
 aside {
