--- a/source/mytheme/static/css/main.scss
+++ b/source/mytheme/static/css/main.scss
@@ -10,7 +10,7 @@ body {
 	margin: 0px;
 }
 
-h1, h2, h3, h4, h5, h6, p, a, li {
+h1, h2, h3, h4, h5, h6, p, a, li, tr, td, table{
 	font-family: $font;
 	color: $dark;
 }
@@ -56,12 +56,30 @@ nav{
 	display: flex;
 }
 
+table {
+  border-collapse: collapse;
+}
+table, th, td {
+  border: 1px solid lightgray;
+}
+
+th, td {
+      padding: 15px;
+          text-align: left;
+        }
+
 main {
 	flex: 3 0 60%;
 	max-width: 700px;
 	min-width: 150px;
 
-	.article {
+  .article {
+    background: $light;
+    border-left: 3px solid $dark;
+    padding: 20px;
+  }
+
+	.article-blurb {
 		display: flex;
 		flex-direction: row;
 		list-style-type: none;
