--- a/source/mytheme/templates/index.html
+++ b/source/mytheme/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% for article in articles_page.object_list %}
-<div class='article'>
+<div class='article-blurb'>
 	{% if article.img %}
 	<img src='/theme/images/{{ article.img }}'>
 	{% endif %}
