--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -31,7 +31,10 @@ nav {
         padding: 3px; }
 
 .wrapper {
-  display: flex; }
+  display: flex;
+  margin: 0 auto;
+  max-width: 1050px;
+  padding: 0 75px; }
 
 table {
   border-collapse: collapse; }
