--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -143,9 +143,15 @@ aside {
   display: inline-block;}
 }
 
-@media screen and (min-width: 680px){
+@media screen and (max-width: 680px){
+  .wrapper {
+    padding: 5px;
+  }
   main{
-    max-width: 700px;
     margin: 10px auto;
+  }
+
+  aside {
+    display: none;
   }
 }
