--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -49,7 +49,8 @@ th, td {
 main {
   flex: 3 0 60%;
   max-width: 700px;
-  min-width: 150px; }
+  min-width: 150px;
+  margin: 20px; }
   main .article {
     background: #fff;
     border-left: 3px solid #444;
