--- a/source/mytheme/static/css/main.scss
+++ b/source/mytheme/static/css/main.scss
@@ -94,6 +94,9 @@ main {
     img {
       max-width: 300px;
       max-height: 400px;
+      display: block;
+      width: auto;
+      height: auto;
     }
 
     .blurb-content{
