--- a/source/mytheme/static/css/main.scss
+++ b/source/mytheme/static/css/main.scss
@@ -102,7 +102,7 @@ main {
       max-width: 300px;
       max-height: 400px;
       display: block;
-      width: auto;
+      width: 100%;
       height: auto;
     }
 
