--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -72,7 +72,7 @@ main {
       max-width: 300px;
       max-height: 400px;
       display: block;
-      width: auto;
+      width: 100%;
       height: auto; }
     main .article-blurb .blurb-content {
       margin: 20px; }
